--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,9 +1,12 @@
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Webpack-for-react</title>
-  </head>
-  <body>
-    <div id="root"></div>
-  </body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
+        <title>Main | YoungJun</title>
+        <link rel="icon" href="./icon_2a69365e5b543d80fb077bed36dd511e.ico" />
+        <link rel="shortcut icon" href="./icon_2a69365e5b543d80fb077bed36dd511e.ico" />
+    </head>
+    <body>
+        <div id="root"></div>
+    </body>
 </html>
