[ADD] frontend - header link && treding api

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -3,8 +3,8 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
         <title>Main | YoungJun</title>
-        <link rel="icon" href="./icon_2a69365e5b543d80fb077bed36dd511e.ico" />
-        <link rel="shortcut icon" href="./icon_2a69365e5b543d80fb077bed36dd511e.ico" />
+        <link rel="icon" href="/public/favicon.ico" />
+        <link rel="shortcut icon" href="/public/favicon.ico" />
     </head>
     <body>
         <div id="root"></div>
