--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -3,8 +3,8 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
         <title>Main | YoungJun</title>
-        <link rel="icon" href="/public/favicon.ico" />
-        <link rel="shortcut icon" href="/public/favicon.ico" />
+        <link rel="icon" href="06d3111634f9fc92834523946a07a6f8.ico" />
+        <link rel="shortcut icon" href="06d3111634f9fc92834523946a07a6f8.ico" />
     </head>
     <body>
         <div id="root"></div>
